@@ -4,6 +4,7 @@ Current
     * Fixed the calculated width of font.Text instances.
     * Renamed examples/event_test.py to examples/events.py
     * Renamed mouse.MOUSE_*_BUTTON to mouse.LEFT, mouse.MIDDLE and mouse.RIGHT
+    * GLX with ATI drivers fixed.
 
 1.0alpha1
 
